# detmesh

./: '  .gitignore  CMakeLists.txt
.cache/clangd/index/: detmesh.c.2315AC19A7FEF631.idx  diamond.c.6349FE3D314978E9.idx  diamond.h.733D71BF62CA9648.idx  gmshc.h.02E364CAD2E67B79.idx
data/: input.txt  structure.txt
include/: .diamond.h.swp  converter.h  detmesh.h  diamond.h  error.h  fmesh.h  fsolve.h  gmesh.h  mesh.h  parsing.h  utility.h  vector.h
lib/fsolve/: CMakeLists.txt
lib/fsolve/include/: fsolve.h
lib/fsolve/src/: fsolve.c
src/: .diamond.c.swp  converter.c  detmesh.c  diamond.c  error.c  fmesh.c  gmesh.c  main.c  mesh.c  parsing.c  utility.c  vector.c
